--- a/hadoop/files/hadoop.sh.jinja
+++ b/hadoop/files/hadoop.sh.jinja
@@ -6,3 +6,5 @@ export HADOOP_COMMON_HOME={{ alt_home }}
 export HADOOP_HDFS_HOME={{ alt_home }}
 export HADOOP_MAPRED_HOME={{ alt_home }}
 export HADOOP_YARN_HOME={{ alt_home }}
+export HIVE_CONF_DIR=/etc/hive/conf
+export HIVE_HOME=/usr/lib/hive
