--- a/hadoop/files/hadoop_env_systemd.jinja
+++ b/hadoop/files/hadoop_env_systemd.jinja
@@ -10,3 +10,5 @@ HADOOP_COMMON_HOME={{ hadoop_home }}
 HADOOP_HDFS_HOME={{ hadoop_home }}
 HADOOP_MAPRED_HOME={{ hadoop_home }}
 HADOOP_YARN_HOME={{ hadoop_home }}
+
+HIVE_CONF_DIR=/etc/hive/conf
