--- a/hadoop/files/hadoop.jinja
+++ b/hadoop/files/hadoop.jinja
@@ -10,3 +10,5 @@ export HADOOP_COMMON_HOME={{ hadoop_home }}
 export HADOOP_HDFS_HOME={{ hadoop_home }}
 export HADOOP_MAPRED_HOME={{ hadoop_home }}
 export HADOOP_YARN_HOME={{ hadoop_home }}
+export HIVE_CONF_DIR=/etc/hive/conf
+export HIVE_HOME=/usr/lib/hive
