--- a/hadoop/files/hadoop.jinja
+++ b/hadoop/files/hadoop.jinja
@@ -12,3 +12,9 @@ export HADOOP_MAPRED_HOME={{ hadoop_home }}
 export HADOOP_YARN_HOME={{ hadoop_home }}
 export HIVE_CONF_DIR=/etc/hive/conf
 export HIVE_HOME=/usr/lib/hive
+
+export TEZ_CONF_DIR=/etc/tez/conf
+export TEZ_JARS=/usr/lib/tez
+
+export HADOOP_CLASSPATH=${TEZ_CONF_DIR}:${TEZ_JARS}/*:${TEZ_JARS}/lib/*
+
