--- a/hadoop/files/hadoop.sh.jinja
+++ b/hadoop/files/hadoop.sh.jinja
@@ -8,3 +8,8 @@ export HADOOP_MAPRED_HOME={{ alt_home }}
 export HADOOP_YARN_HOME={{ alt_home }}
 export HIVE_CONF_DIR=/etc/hive/conf
 export HIVE_HOME=/usr/lib/hive
+
+export TEZ_CONF_DIR=/etc/tez/conf
+export TEZ_JARS=/usr/lib/tez
+
+export HADOOP_CLASSPATH=${TEZ_CONF_DIR}:${TEZ_JARS}/*:${TEZ_JARS}/lib/*
