--- a/hadoop/files/hadoop.sh.jinja
+++ b/hadoop/files/hadoop.sh.jinja
@@ -9,7 +9,4 @@ export HADOOP_YARN_HOME={{ alt_home }}
 export HIVE_CONF_DIR=/etc/hive/conf
 export HIVE_HOME=/usr/lib/hive
 
-export TEZ_CONF_DIR=/etc/tez/conf
-export TEZ_JARS=/usr/lib/tez
-
-export HADOOP_CLASSPATH=${TEZ_CONF_DIR}:${TEZ_JARS}/*:${TEZ_JARS}/lib/*
+HADOOP_CLASSPATH=/usr/lib/tez/*:/usr/lib/tez/lib/*
