--- a/hadoop/files/hadoop_env_systemd.jinja
+++ b/hadoop/files/hadoop_env_systemd.jinja
@@ -10,3 +10,8 @@ HADOOP_COMMON_HOME={{ hadoop_home }}
 HADOOP_HDFS_HOME={{ hadoop_home }}
 HADOOP_MAPRED_HOME={{ hadoop_home }}
 HADOOP_YARN_HOME={{ hadoop_home }}
+
+HIVE_CONF_DIR=/etc/hive/conf
+HIVE_HOME=/usr/lib/hive
+
+HADOOP_CLASSPATH=/usr/lib/tez/*:/usr/lib/tez/lib/*
