--- a/hadoop/files/hadoop_env_systemd.jinja
+++ b/hadoop/files/hadoop_env_systemd.jinja
@@ -1,7 +1,11 @@
+{%- from 'hadoop/settings.sls' import hadoop with context -%}
 JAVA_HOME={{ java_home }}
 HADOOP_HOME_WARN_SUPPRESS=true
 HADOOP_HOME={{ hadoop_home }}
+
+{% if hadoop.major_version == 2 %}
 HADOOP_PREFIX={{ hadoop_home }}
+{%- endif %}
 
 HADOOP_LIBEXEC_DIR={{ hadoop_home }}/libexec
 HADOOP_CONF_DIR={{ hadoop_config }}
