--- a/hadoop/files/hadoop.sh.jinja
+++ b/hadoop/files/hadoop.sh.jinja
@@ -1,4 +1,7 @@
+{%- from 'hadoop/settings.sls' import hadoop with context %}
+{%- if hadoop.major_version == 2 %}
 export HADOOP_PREFIX={{ alt_home }}
+{% endif %}
 export HADOOP_HOME={{ alt_home }}
 export HADOOP_CONF_DIR={{ hadoop_config }}
 export HADOOP_LIBEXEC_DIR={{ alt_home }}/libexec
