INFRAOP-0: cleanup, drop init.d and hadoop v1 support

--- a/hadoop/files/hadoop.jinja
+++ b/hadoop/files/hadoop.jinja
@@ -1,18 +1,19 @@
-export JAVA_HOME={{ java_home }}
-export HADOOP_HOME_WARN_SUPPRESS=true
-export HADOOP_HOME={{ hadoop_home }}
-export HADOOP_PREFIX={{ hadoop_home }}
+{% if var_export %}export{% endif -%} JAVA_HOME={{ java_home }}
+{% if var_export %}export{% endif -%} HADOOP_HOME_WARN_SUPPRESS=true
+{% if var_export %}export{% endif -%} HADOOP_HOME={{ hadoop_home }}
 
-export HADOOP_LIBEXEC_DIR={{ hadoop_home }}/libexec
-export HADOOP_CONF_DIR={{ hadoop_config }}
+{% if hadoop_major_version == '2' %}
+{% if var_export %}export{% endif -%} HADOOP_PREFIX={{ hadoop_home }}
+{%- endif %}
 
-export HADOOP_COMMON_HOME={{ hadoop_home }}
-export HADOOP_HDFS_HOME={{ hadoop_home }}
-export HADOOP_MAPRED_HOME={{ hadoop_home }}
-export HADOOP_YARN_HOME={{ hadoop_home }}
-export HIVE_CONF_DIR=/etc/hive/conf
-export HIVE_HOME=/usr/lib/hive
+{% if var_export %}export{% endif -%} HADOOP_CONF_DIR={{ hadoop_config }}
+{% if var_export %}export{% endif -%} HADOOP_LIBEXEC_DIR={{ hadoop_home }}/libexec
+{% if var_export %}export{% endif -%} HADOOP_COMMON_HOME={{ hadoop_home }}
+{% if var_export %}export{% endif -%} HADOOP_HDFS_HOME={{ hadoop_home }}
+{% if var_export %}export{% endif -%} HADOOP_MAPRED_HOME={{ hadoop_home }}
+{% if var_export %}export{% endif -%} HADOOP_YARN_HOME={{ hadoop_home }}
+{% if var_export %}export{% endif -%} HIVE_CONF_DIR=/etc/hive/conf
+{% if var_export %}export{% endif -%} HIVE_HOME=/usr/lib/hive
 
-export TEZ_CONF_DIR=/etc/tez/conf
-
-export HADOOP_CLASSPATH=/usr/lib/tez/*:/usr/lib/tez/lib/*
+{% if var_export %}export{% endif -%} TEZ_CONF_DIR=/etc/tez/conf
+{% if var_export %}export{% endif -%} HADOOP_CLASSPATH=/usr/lib/tez/*:/usr/lib/tez/lib/*
