--- a/hadoop/files/hadoop.jinja
+++ b/hadoop/files/hadoop.jinja
@@ -6,6 +6,13 @@
 {% if var_export %}export {% endif -%} HADOOP_PREFIX={{ hadoop_home }}
 {%- endif %}
 
+{% if grains['hadoop_heap_size'] -%}
+{%- if var_export %}export {% endif -%} HADOOP_HEAPSIZE={{ grains['hadoop_heap_size'] }}
+{%- endif  %}
+{% if grains['hadoop_opts'] -%}
+{%- if var_export %}export {% endif -%} HADOOP_OPTS={{ grains['hadoop_opts'] }}
+{%- endif  %}
+
 {% if var_export %}export {% endif -%} HADOOP_CONF_DIR={{ hadoop_config }}
 {% if var_export %}export {% endif -%} HADOOP_LIBEXEC_DIR={{ hadoop_home }}/libexec
 {% if var_export %}export {% endif -%} HADOOP_COMMON_HOME={{ hadoop_home }}
